--- a/styles/style.css
+++ b/styles/style.css
@@ -28,19 +28,20 @@
   position: absolute;
   left: 64px;
   top: 30px;
-  z-index: 2;
+  z-index: 3;
 }
 
 .header__title {
   width: 730px;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
   font-size: 102px;
   line-height: 96px;
   font-weight: 600;
-  z-index: 3;
+  z-index: 2;
 }
 
 .header__subtitle {
+  margin: 0;
   width: 388px;
   position: absolute;
   left: 64px;
@@ -48,11 +49,12 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  z-index: 3;
+  z-index: 2;
 }
 
 .header__link {
   color: #2f80ed;
+  text-decoration: none;
 }
 
 .header__main-illustration {
@@ -65,7 +67,7 @@
   position: absolute;
   right: 0px;
   bottom: 0px;
-  z-index: 2;
+  z-index: 1;
 }
 .header__square-pic {
   background-color: #2f80ed;
@@ -74,7 +76,7 @@
   right: 0px;
   height: 568px;
   width: 568px;
-  z-index: 1;
+  z-index: 0;
 }
 
 .description {
@@ -85,6 +87,7 @@
 .two-columns {
   width: 80%;
   display: flex;
+  justify-content: space-between;
   margin-top: 100px;
 }
 
@@ -125,6 +128,11 @@
   margin-top: 0;
 }
 
+.digits {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
 .section-title {
   width: 60%;
   margin: 0 auto 20px;
@@ -143,23 +151,23 @@
   font-weight: normal;
 }
 
-.digits {
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-
 .table {
   display: flex;
-  width: 1110px;
+  max-width: 1100px;
   margin: 0 auto;
   justify-content: space-between;
   flex-wrap: wrap;
+  align-items: flex-start;
+  padding-inline-start: 0px;
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  justify-items: center;
 }
 
 .table__cell {
   margin-top: 60px;
   width: 250px;
-  list-style: none;
 }
 
 .table__heading {
@@ -218,6 +226,7 @@
   font-size: 36px;
   font-weight: normal;
   z-index: 1;
+  text-decoration: none;
 }
 
 .feynman__pic {
@@ -240,10 +249,6 @@
   overflow: hidden;
 
 }
-.table_theme_dark {
-  position: relative;
-  z-index: 1;
-}
 
 .section-title_theme_dark {
   color: white;
@@ -251,6 +256,11 @@
 
 .section-subtitle_theme_dark {
   color: white;
+}
+
+.table_theme_dark {
+  position: relative;
+  z-index: 1;
 }
 
 .table__cell_theme_dark {
@@ -276,13 +286,15 @@
   background-color: #1f1f1f;
   padding-top: 60px;
   padding-bottom: 40px;
-  min-height: 350px;
 }
 
 .footer__columns {
   width: 90%;
   display: flex;
   margin: auto;
+  min-height: 250px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .footer__column_content_copyright {
@@ -319,7 +331,6 @@
   display: flex;
   flex-direction: column;
   margin-top: 0;
-  margin-bottom: 16px;
 }
 
 
@@ -329,16 +340,19 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
-  margin: 0;
   text-decoration: none;
+  position: relative;
+  margin: 0;
+  align-items: center;
 }
 
-.footer__column_content_social {
-  position: absolute;
-  right: 0;
-}
-
-.footer__column_content_info {
-  position: absolute;
-  right: 350px;
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+  bottom: 0;
+  vertical-align: middle;
 }
