--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@
   align-items: center;
   background-color: #f2f2f2;
   z-index: 0;
+  position: relative;
 }
 
 .logo {
@@ -82,20 +83,16 @@
 .description {
   display: flex;
   justify-content: center;
+  margin-top: 100px;
 }
 
 .two-columns {
   width: 80%;
   display: flex;
   justify-content: space-between;
-  margin-top: 100px;
 }
 
-.two-columns__brief{
-  width: 20%;
-}
-
-.two-columns__brief-title {
+.two-columns__brief {
   width: 175px;
   margin: 0;
   line-height: 1.2;
@@ -129,8 +126,8 @@
 }
 
 .digits {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .section-title {
@@ -190,16 +187,17 @@
 
 .feynman {
   background-color: #f2f2f2;
-  height: 790px;
+  height: 890px;
   position: relative;
-  padding-top: 100px;
   z-index: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .feynman__title {
   width: 648px;
   text-align: center;
-  margin: 0 auto;
+  margin: 100px auto 0;
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
@@ -330,6 +328,9 @@
   display: flex;
   flex-direction: column;
   margin-top: 0;
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 
