--- a/styles/style.css
+++ b/styles/style.css
@@ -331,8 +331,8 @@
   list-style-type: none;
   margin-block-start: 0;
   margin-block-end: 0;
+  padding-inline-start: 0;
 }
-
 
 .footer__column-link {
   display: flex;
