--- a/styles/style.css
+++ b/styles/style.css
@@ -49,13 +49,16 @@
   bottom: 30px;
   line-height: 25px;
   font-size: 18px;
-  font-weight: normal;
   z-index: 2;
 }
 
 .header__link {
   color: #2f80ed;
   text-decoration: none;
+}
+
+.header__link:hover {
+  color: #808080;
 }
 
 .header__main-illustration {
@@ -97,7 +100,6 @@
   margin: 0;
   line-height: 1.2;
   font-size: 18px;
-  font-weight: normal;
   color: #2f80ed;
 }
 
@@ -112,7 +114,6 @@
   margin: 30px 0 0;
   line-height: 34px;
   font-size: 24px;
-  font-weight: normal;
 }
 
 .two-columns__span-accent{
@@ -145,7 +146,6 @@
   text-align: center;
   line-height: 34px;
   font-size: 24px;
-  font-weight: normal;
 }
 
 .table {
@@ -154,12 +154,10 @@
   margin: 0 auto;
   justify-content: space-between;
   flex-wrap: wrap;
-  align-items: flex-start;
   padding-inline-start: 0px;
   list-style-type: none;
   margin-block-start: 0;
   margin-block-end: 0;
-  justify-items: center;
 }
 
 .table__cell {
@@ -178,7 +176,6 @@
   margin: 0;
   line-height: 1.2;
   font-size: 18px;
-  font-weight: normal;
 }
 
 .table__text:last-child {
@@ -210,7 +207,6 @@
   margin: 70px auto 0;
   line-height: 51px;
   font-size: 36px;
-  font-weight: normal;
   position: relative;
   z-index: 1;
 }
@@ -222,18 +218,19 @@
   top: 50%;
   line-height: 51px;
   font-size: 36px;
-  font-weight: normal;
   z-index: 1;
   text-decoration: none;
+}
+
+.feynman__link:hover {
+  color: #808080;
 }
 
 .feynman__pic {
   width: 867px;
   height: 637px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: left bottom;
   position: absolute;
+  object-fit: contain;
   left: 0px;
   bottom: 0px;
   z-index: 0;
@@ -249,11 +246,15 @@
 }
 
 .section-title_theme_dark {
-  color: white;
+  color: #fff;
+  position: relative;
+  z-index: 1;
 }
 
 .section-subtitle_theme_dark {
-  color: white;
+  color: #fff;
+  position: relative;
+  z-index: 1;
 }
 
 .table_theme_dark {
@@ -263,7 +264,7 @@
 
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
+  color: #fff;
   margin-right: 0;
   margin-top: 80px;
 }
@@ -274,7 +275,6 @@
   height: 877px;
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: right;
   position: absolute;
   top: 0px;
   right: -210px;
@@ -282,22 +282,29 @@
 
 .footer {
   background-color: #1f1f1f;
-  padding-top: 60px;
-  padding-bottom: 40px;
+  min-height: 350px;
+  display: flex;
+  justify-content: center;
+  padding: 60px 0 40px;
+  box-sizing: border-box;
 }
 
 .footer__columns {
   width: 90%;
   display: flex;
-  margin: auto;
-  min-height: 250px;
+  flex-direction: row;
   justify-content: space-between;
 }
 
 .footer__column_content_copyright {
+  display: flex;
+  flex-direction: column;
   flex-basis: 711px;
   position: relative;
-  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  margin:0;
+  padding: 0;
 }
 
 .logo_place_footer {
@@ -305,18 +312,14 @@
 }
 
 .footer__author {
-  position: absolute;
   margin: 18px 0;
-  bottom: 0px;
-  left: 0px;
-  color: white;
+  color: #fff;
   line-height: 25px;
   font-size: 18px;
-  font-weight: normal;
 }
 
 .footer__column-heading {
-  color: white;
+  color: #fff;
   margin-top: 0;
   margin-bottom: 20px;
   line-height: 30px;
@@ -336,23 +339,22 @@
 
 .footer__column-link {
   display: flex;
-  color: white;
+  color: #fff;
   line-height: 30px;
   font-size: 18px;
-  font-weight: normal;
   text-decoration: none;
-  position: relative;
   margin: 0;
   align-items: center;
+}
+
+.footer__column-link:hover {
+  color: #C0C0C0;
 }
 
 .footer__social-icon {
   width: 16px;
   height: 16px;
   margin-right: 10px;
-  background-size: contain;
   background-repeat: no-repeat;
-  position: relative;
-  bottom: 0;
-  vertical-align: middle;
+  object-fit: contain;
 }
