--- a/styles/style.css
+++ b/styles/style.css
@@ -57,10 +57,6 @@
   text-decoration: none;
 }
 
-.header__link:hover {
-  color: #808080;
-}
-
 .header__main-illustration {
   background-image: url('../images/header-image.png');
   width: 765px;
@@ -101,6 +97,7 @@
   line-height: 1.2;
   font-size: 18px;
   color: #2f80ed;
+  font-weight: normal;
 }
 
 .two-columns__main-text {
@@ -220,10 +217,6 @@
   font-size: 36px;
   z-index: 1;
   text-decoration: none;
-}
-
-.feynman__link:hover {
-  color: #808080;
 }
 
 .feynman__pic {
@@ -346,14 +339,9 @@
   align-items: center;
 }
 
-.footer__column-link:hover {
-  color: #C0C0C0;
-}
-
 .footer__social-icon {
   width: 16px;
   height: 16px;
   margin-right: 10px;
-  background-repeat: no-repeat;
   object-fit: contain;
 }
