--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+@keyframes rotation {
+  from {
+      transform: rotate(0deg);
+  }
+  to {
+      transform: rotate(360deg);
+  }
+}
+
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -14,6 +23,7 @@
   background-color: #f2f2f2;
   z-index: 0;
   position: relative;
+  overflow: hidden;
 }
 
 .logo {
@@ -57,6 +67,11 @@
   text-decoration: none;
 }
 
+.header__link:hover {
+  opacity: .6;
+  transition: opacity .1s ease-out;
+}
+
 .header__main-illustration {
   background-image: url('../images/header-image.png');
   width: 765px;
@@ -69,6 +84,7 @@
   bottom: 0px;
   z-index: 1;
 }
+
 .header__square-pic {
   background-color: #2f80ed;
   position: absolute;
@@ -79,10 +95,17 @@
   z-index: 0;
 }
 
+.rotation {
+  animation-name: rotation;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
 .description {
   display: flex;
   justify-content: center;
-  margin-top: 100px;
+  padding-top: 100px;
 }
 
 .two-columns {
@@ -124,8 +147,8 @@
 }
 
 .digits {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .section-title {
@@ -179,6 +202,8 @@
   margin: 20px 0 0;
 }
 
+
+
 .feynman {
   background-color: #f2f2f2;
   height: 890px;
@@ -217,6 +242,11 @@
   font-size: 36px;
   z-index: 1;
   text-decoration: none;
+}
+
+.feynman__link:hover {
+  opacity: .6;
+  transition: opacity .1s ease-out;
 }
 
 .feynman__pic {
@@ -339,9 +369,196 @@
   align-items: center;
 }
 
+.footer__column-link:hover {
+  opacity: .6;
+  transition: opacity .1s ease-out;
+}
+
+
 .footer__social-icon {
   width: 16px;
   height: 16px;
   margin-right: 10px;
   object-fit: contain;
+}
+
+
+
+
+
+
+
+
+
+
+.techniques {
+  padding-top: 100px;
+  margin: 0 auto;
+  width: 80%;
+  display: flex;
+	justify-content: center;
+  flex-wrap: wrap;
+}
+
+.cards {
+  width: 920px;
+  display: flex;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  padding-inline-start: 0px;
+  list-style-type: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+.cards__item {
+  margin: 60px 100px 0 0;
+  width: 240px;
+  text-align: center;
+}
+
+.cards__item:nth-child(3n+3) {
+  margin-right: 0;
+}
+
+.cards__image {
+  width: 160px;
+  height: 160px;
+  object-fit: contain;
+  margin-bottom: 43px;
+  border-radius: 50%;
+}
+
+.cards__title {
+  margin: 0 0 16px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.cards__description {
+  margin: 0;
+  line-height: 23px;
+  font-size: 18px;
+}
+
+.video {
+  padding-top: 100px;
+  list-style: none;
+}
+
+.video__iframes {
+  padding-top: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.video__iframe {
+  margin-right: 20px;
+  margin-bottom: -60px;
+  width: 516px;
+  height: 316px;
+}
+
+.video__iframe:last-child {
+  margin-right: 0px;
+}
+
+.oakley {
+  background-color: #f2f2f2;
+  display: flex;
+  justify-content: center;
+  padding-top: 160px;
+}
+
+.khan{
+  background-color: #f2f2f2;
+  padding-top: 105px;
+  display: flex;
+  justify-content: center;
+  }
+
+.khan__container {
+  width: 80%;
+}
+
+.khan__author {
+  margin: 0;
+  line-height: 42px;
+  font-size: 30px;
+}
+
+.khan__title {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.khan__quote {
+  width: 790px;
+  margin: 50px 0 36px 0;
+  line-height: 34px;
+  font-size: 24px;
+}
+
+.khan__quote-author {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.khan__quote-author-subline {
+  margin: 10px 0 68px;
+  line-height: 1.15;
+  font-size: 24px;
+}
+
+.khan__book-container {
+  display: flex;
+}
+
+.khan__book-pic{
+  width: 620px;
+  height: 608px;
+  object-fit: cover;
+  object-position: left top;
+}
+
+.khan__buy-link {
+  color:#2f80ed;
+  margin: 0 0 0 48px;
+  line-height: 42px;
+  font-size: 30px;
+  text-decoration: none;
+}
+
+.khan__buy-link:hover {
+  opacity: .6;
+  transition: opacity .1s ease-out;
+}
+
+.resources {
+  padding: 100px 0 217px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.resources__logo-zone {
+  width: 1100px;
+  margin-top: 80px;
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  margin-block-end: 0;
+  padding-inline-start: 0;
+}
+
+.resources__link {
+  margin: 0;
+  width: 270px;
+  height: 38px;
 }
