--- a/blocks/rotation/rotation.css
+++ b/blocks/rotation/rotation.css
@@ -8,8 +8,5 @@
 }
 
 .rotation {
-  animation-name: rotation;
-  animation-duration: 20s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+  animation: rotation 20s linear infinite;
 }
