--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -1,5 +1,10 @@
 .resources__link {
-  margin: 0;
   width: 270px;
   height: 38px;
+  margin: 0;
+}
+
+.resources__link:hover {
+  opacity: .6;
+  transition: opacity .1s ease-out;
 }
